# python-project-83

./: .gitignore  Makefile  README.md  docker-compose.test.yml  pyproject.toml
.github/workflows/: python-check.yml
page_analyzer/: __init__.py  app.py  database.sql  db.py  models.py  services.py  settings.py  views.py
page_analyzer/db/: engine.py
page_analyzer/services/: check_url.py  db.py  sql_query.py  url.py  utils.py
page_analyzer/templates/: base.html  index.html  url.html  urls.html
page_analyzer/tests/: test_app.py
tests/: conftest.py  test_app.py  test_data.sql  test_db.py  test_models.py  test_services.py  test_url_service.py  test_view.py  test_views.py
