[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["KAnanev <russrage@yandex.ru>"]
readme = "README.md"
packages = [{include = "page_analyzer"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
gunicorn = "^20.1.0"
python-dotenv = "^1.0.0"
validators = "^0.20.0"
psycopg-binary = "^3.1.9"
psycopg-c = "^3.1.9"
psycopg = "^3.1.9"
pydantic = "^2.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
flake8-pyproject = "^1.2.3"
pytest = "^7.3.1"
coverage = "^7.2.7"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
accept-encodings = "utf-8"
max-complexity = 5
statistics = "False"
max-line-length = 80
enable-extensions = "G"
isort-show-traceback = "True"

exclude = ".venv,dist,build"

per-file-ignores = "__init__.py: F401"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
default_section = "FIRSTPARTY"
line_length = 80
